# qt_rhi_qquickpainteditem_leak

./: .gitignore  CMakeLists.txt  README.md  deploy_3rdparty_libs.py  deploy_qt.py
cmake/: QtSettings.cmake
inc/: qline_item.h  rhi_application.h
qml/: main.qml
src/: qline_item.cpp  rhi_application.cpp  rhi_bug.cpp
